Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__lexer__tests__bad_tokens.snap
---
source: simulatron-salt/src/lib/lexer.rs
expression: output

---
Identifier `This`
Whitespace ` `
Identifier `is`
Whitespace ` `
Identifier `_really_`
Whitespace ` `
Identifier `wrong`
Whitespace ` `
Identifier `for`
Whitespace ` `
Identifier `a`
Whitespace ` `
Unknown `*`
Unknown `.`
Identifier `simasm`
Whitespace ` `
Identifier `file`
Unknown `.`
Whitespace ` `
Identifier `There`
Whitespace ` `
Identifier `are`
Whitespace ` `
Identifier `all`
Whitespace ` `
Identifier `sorts`
Whitespace ` `
Identifier `of`
Whitespace ` `
Identifier `incorrect`
Whitespace ` `
Identifier `tokens`
Comma `,`
Whitespace ` `
Identifier `generating`
Whitespace ` `
Identifier `lots`
Whitespace ` `
Identifier `of`
Whitespace ` `
Identifier `errors`
Unknown `.`
Newline
Newline
Identifier `int`
Whitespace ` `
Identifier `main`
OpenParen `(`
Identifier `int`
Whitespace ` `
Identifier `argc`
Comma `,`
Whitespace ` `
Identifier `char`
Whitespace ` `
Unknown `*`
Unknown `*`
Identifier `argv`
CloseParen `)`
Newline
Unknown `{`
Newline
Whitespace `    `
Unknown `/`
Unknown `*`
Whitespace ` `
Identifier `Don`
Unknown `'`
Identifier `t`
Whitespace ` `
Identifier `you`
Whitespace ` `
Identifier `love`
Whitespace ` `
Identifier `this`
Whitespace ` `
Identifier `comment`
Whitespace ` `
Identifier `style`
Unknown `?`
Whitespace ` `
Unknown `*`
Unknown `/`
Newline
Whitespace `    `
Identifier `printf`
OpenParen `(`
StringLiteral `"Hello, World!"`
CloseParen `)`
Unknown `;`
Newline
Unknown `}`
Newline
Newline
Identifier `main`
Whitespace ` `
Colon `:`
Colon `:`
Whitespace ` `
Identifier `IO`
Whitespace ` `
OpenParen `(`
CloseParen `)`
Newline
Identifier `main`
Whitespace ` `
Unknown `=`
Whitespace ` `
Identifier `putStrLn`
Whitespace ` `
StringLiteral `"Hello, World!"`
Whitespace `  `
Unknown `-`
Unknown `-`
Whitespace ` `
Identifier `We`
Unknown `'`
Identifier `re`
Whitespace ` `
Identifier `writing`
Whitespace ` `
Identifier `Haskell`
Comma `,`
Whitespace ` `
Identifier `right`
Unknown `?`
Newline
Newline
Identifier `if`
Whitespace ` `
Identifier `__name__`
Whitespace ` `
Unknown `=`
Unknown `=`
Whitespace ` `
StringLiteral `"__main__"`
Colon `:`
Newline
Whitespace `    `
Identifier `print`
OpenParen `(`
StringLiteral `"Hello, world!"`
CloseParen `)`
Whitespace `  `
Unknown `#`
Whitespace ` `
Identifier `Say`
Whitespace ` `
Identifier `hello`
Unknown `.`
Newline
Newline
Comment `// The next bit is almost correct!`
Newline
Const `const`
Whitespace ` `
Identifier `YEET`
Whitespace ` `
OpenParen `(`
IntLiteral `42`
CloseParen `)`
Newline

