Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__lexer__tests__string_literal.snap
---
source: src/lib/lexer.rs
expression: output

---
Static `static`
Whitespace ` `
Byte `byte`
OpenSquare `[`
IntLiteral `5`
CloseSquare `]`
Whitespace ` `
Identifier `greeting`
Whitespace ` `
StringLiteral `"Hello"`
Newline
Newline
Identifier `halt`
Newline

